      easilly reverted.
    * Improved media device support.
    * Video applet to show videos from YouTube, Dailymotion and Vimeo.
      The video can be appended to the playlist, and rendered within the applet.
    * Photo applet to show images from Flickr, with customizable animations.
    * Customizable user interface using dock widgets.
    * Support for external MySQL database.
    * GHNS integration for downloading and installing Context applets.
    * Support for Context applets to be written in QtScript.
    * Custom Dynamic Playlists using Last.fm.
    * Drag and Drop support for album cover image. (BR 91261)
    * Upcoming and previous tracks count for dynamic playlist is now
      configurable. (BR 177540)

  CHANGES:
    * Hueristics when deciding which album to use in a directory. See comments
      in (BR 196559)
    * The "Service Info" applet is now simply called "Info" to reflect that
      it now shows info from other parts of Amarok as well.
    * Remove the bookmark manager context applet and add a bookmark manager
      dialog instead.
    * Magnatune.com store: Add a link to purchase gift cards to the purhcase 
      dialog.
    * Reset playlist filter when using the "replace playlist" action. Patch 
      by John Atkinson <john@fauxnetic.co.uk> (BR 200709)
    * Track lyrics are exposed through the DBUS interface.
    * The database connection and tables now enforce UTF-8 for the character
      set and collation.
    * The OSD registers itself as a notification window type on relevant
      platforms. Patch thanks to Danny Baumann <dannybaumann@web.de>.
      (BR 194517)
    * Improvements to the Wikipedia applet. History, language settings
      and more.
    * Improvements to the Current applet. Text slides on mouse hover.
    * New navigation style in the browser sidebar.
    * Improvements to the Albums applet. Show individual track times and
      highlight currently playing artist within compilation albums